# ul-fri-nlp-course-project-iota

./: .gitignore  README.md  pyproject.toml  requirements.txt
code/: bookbot.py  characterbot.py  evaluate.py  evaluate_bookbot.py  sorting-hat-parser.py  sorting_hat.json  testing.py  train.py
code/chatbots/: book.py  character.py
code/evaluation/: AnswersEvaluation.ipynb  GenerateQuestioners.ipynb  manual_evaluation_questions.py  sorting_hat.py  trivia.py
code/results/answered-questioners/: phi-2-jan.xlsx  phi-2-matej.xlsx  phi-2-ziga.xlsx  phi-3-jan.xlsx  phi-3-matej.xlsx  phi-3-ziga.xlsx
code/results/questioners/: phi-2-jan.csv  phi-2-jan.xlsx  phi-2-matej.csv  phi-2-matej.xlsx  phi-2-ziga.csv  phi-2-ziga.xlsx  phi-3-jan.csv  phi-3-jan.xlsx  phi-3-matej.csv  phi-3-matej.xlsx  phi-3-ziga.csv  phi-3-ziga.xlsx
code/results/sorting_hat/: Cedric_sorting_hat_evaluation.json  Cedric_sorting_hat_evaluation_llama.json  Cho_sorting_hat_evaluation.json  Cho_sorting_hat_evaluation_llama.json  Dumbledore_sorting_hat_evaluation.json  Dumbledore_sorting_hat_evaluation_llama.json  Harry_sorting_hat_evaluation.json  Harry_sorting_hat_evaluation_llama.json  Luna_sorting_hat_evaluation.json  Luna_sorting_hat_evaluation_llama.json  Malfoy_sorting_hat_evaluation.json  Malfoy_sorting_hat_evaluation_llama.json  Snape_sorting_hat_evaluation.json  Snape_sorting_hat_evaluation_llama.json  Tonks_sorting_hat_evaluation.json  Tonks_sorting_hat_evaluation_llama.json  parse_results.py
code/testing/: dialogues.ipynb  llama.ipynb  rag.ipynb
code/utils/: load_model.py
data/books/asoif/: Book 1 - A Game of Thrones.txt  Book 2 - A Clash of Kings.txt  characters.txt  (+3 more)
data/code/: DataVis.ipynb  DialogueAnalysis.ipynb  Dialogues.ipynb  EDA.ipynb  _deprecated.ipynb  data_process.ipynb  data_process.py  data_process_2.py  data_process_old.py  hpc_data.sh  prompt.txt  sbatch_data_process.sh  summarize.ipynb
data/dialogue/: .gitignore  README.md
data/eda/: EDA.ipynb  pyproject.toml
data/quizzes/: quiz-parser.py
report/: report.bib  report.tex
review/: active_retrieval_augmented_generation.md  alana.md  character_llm.md  chatbot_is_not_all_you_need.md  dexter.md  open_icl.md  pedagogical_agents.md  situation_models.md  textbooks.md  the_big_five.md
(+52 files in other folders)
