[tool.poetry]
name = "eda"
version = "0.1.0"
description = "Exploratory data analysis"
authors = ["Jan Vasiljevic <vasiljevic.jan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
seaborn = "^0.13.2"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
